fix performance issue on front page
-remove tooltip jquery code in componentDidMount() in card.jsx to fix
perf issue
-add tooltip jquery code in cards.jsx
-fix tooltip being overlapped by labels
-add sidebar menu scrolling

--- a/imports/ui/components/Card.less
+++ b/imports/ui/components/Card.less
@@ -41,7 +41,7 @@
   }
 
   .extra.content {
-    z-index:9999;
+    z-index:2;
   }
 }
 
