--- a/imports/ui/components/Sidebar.less
+++ b/imports/ui/components/Sidebar.less
@@ -7,3 +7,7 @@
 		}
 	}
 }
+
+.ui.vertical.menu {
+	overflow:auto;
+}
